--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lodash-es": "^4.17.21",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "typescript": "^5",
